--- a/front-end/book-store/package.json
+++ b/front-end/book-store/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.15",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.9.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5"
