--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,10 +12,11 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
+    "global": "^4.3.2",
     "graphql": "^14.0.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.3.7",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.18.5",
     "npm": "^6.4.1"
   },
   "devDependencies": {
